Lots of uncommitted stuff and alignment with latest maverick APIs.